welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:25: error: reassignment to val
		x=x+1
                 ^